Stylování + mazání členů
Nastylování základu projektu a členů nákupního seznamu. Mazání členů nákupního seznamu.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
     <meta name="author" content="milos-hynek" />
     <meta name="robots" content="noindex, nofollow" />
 		<link rel="icon" type="image/x-icon" href="./favicon.ico" />		
-    <title>Domácí úkol 2 - Detail nákupního seznamu | Frontendové systémy</title>
+    <title>Domácí úkol 2 - Detail nákupního seznamu | Frontendové systémy | Miloš Hynek</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
   </head>
   <body>
   	<div id="result"></div>
